Tue Mar 22 15:36:25 GMT 2011  Dan Colish <dcolish@gmail.com>

	* backends/brass/brass_database.h:
	  Remove left over copyright.

Tue Mar 22 04:54:12 GMT 2011  Dan Colish <dcolish@gmail.com>

	* backends/brass/brass_btreebase.cc,backends/chert/chert_btreebase.cc,
	  backends/flint/flint_btreebase.cc:
	  Correct comments for which revision is packed when writing base files

Tue Mar 22 03:18:19 GMT 2011  Dan Colish <dcolish@gmail.com>

	* backends/brass/brass_database.cc,backends/chert/chert_database.cc,
	  backends/flint/flint_database.cc,include/xapian/database.h:
	  Remove FIXME and comments for DB_OVERWRITE.

Tue Mar 22 01:18:38 GMT 2011  Dan Colish <dcolish@gmail.com>

	* backends/brass/,backends/chert/chert_database.cc,
	  backends/flint/flint_database.cc,tests/api_replicate.cc:
          Clean up changesets when replicating. Add test coverage for this
	  feature. Allow XAPIAN_MAX_CHANGESETS to be altered without reopening
	  the database. Closes Ticket #278.

Mon Mar 21 01:50:41 GMT 2011  Olly Betts <olly@survex.com>

	* docs/bm25.html: Add a link to the 1976 Robertson/Sparck Jones paper.

Wed Mar 16 05:56:58 GMT 2011  Dan Colish <dcolish@gmail.com>

	* bin/xapian-check-flint.cc: Initialize did and current_wdf to prevent
	  uninitalized usage and compiler warnings.

Mon Mar 14 03:20:18 GMT 2011  Olly Betts <olly@survex.com>

	* common/debuglog.cc,common/debuglog.h: Rename indent member to
	  indent_level so it doesn't clash with indent() method.

Mon Mar 14 02:44:24 GMT 2011  Olly Betts <olly@survex.com>

	* common/debuglog.cc,common/debuglog.h: Use an integer counter for the
	  indent rather than a std::string which we add/remove spaces to/from.
	  This is cleaner, but also there seems to be an issue with having a
	  std::string member in a global static object on OS X.

Fri Mar 11 01:12:04 GMT 2011  Olly Betts <olly@survex.com>

	* HACKING: Document using '{ }' rather than ';' for empty loop bodies.

Fri Mar 11 01:02:47 GMT 2011  Olly Betts <olly@survex.com>