@@ -1,3 +1,10 @@
+Thu Mar 24 23:31:57 GMT 2011  Olly Betts <olly@survex.com>
+
+	* api/replication.cc,common/replication.h: Pass reader_close_time as
+	  double everywhere, rather than truncating it to int.  Include
+	  reader_close_time parameters in debug logging.  Document
+	  reader_close_time in doxygen comments.
+
 Tue Mar 22 15:36:25 GMT 2011  Dan Colish <dcolish@gmail.com>
 
 	* backends/brass/brass_database.h:
